# adaptive-triangulation

./: .gitignore  .pre-commit-config.yaml  CLEANUP.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  PROFILING-RESULTS.md  README.md  REPORT.md  build.rs  pyproject.toml
.claude/: REPORT.md
.github/workflows/: ci.yml
benches/: bench_learner1d.py  bench_triangulation.rs
examples/: adaptive_learnernd.py  basic_usage.py  benchmark_vs_python.py
python/adaptive_triangulation/: __init__.py  __init__.pyi  _rust.pyi
src/: geometry.rs  lib.rs  triangulation.rs
src/learner1d/: loss.rs  mod.rs  python.rs
tests/: test_learner1d.py  test_project_metadata.py  test_triangulation.py
